--- a/Express/myapp/public/css/style.css
+++ b/Express/myapp/public/css/style.css
@@ -1,6 +1,8 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #e3f2fd;
+    display: flex;
+    flex-direction: column;
 
   }
   header{
